# Busy-as-a-shrimp

./: .env.example  .env.production  .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  lint_output.txt  lint_results.json  package-lock.json  package.json  pnpm-lock.yaml  prisma_error_utf8.txt  roadmap.md  technical-requirements.md  test_resource_api.js  tsconfig.base.json
.run-logs/: api_logs.txt  api_logs2.txt  api_logs3.txt
apps/admin/: next.config.mjs  package.json  tsconfig.json
apps/admin/app/: AdminNav.tsx  globals.css  layout.tsx  loading.tsx  page.module.css  page.tsx
apps/admin/app/activity/: page.tsx
apps/admin/lib/: auth.ts
apps/admin/src/: env.ts
apps/api/: package.json  tsconfig.build.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/miniprogram/: README.md
apps/web/: next.config.mjs  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/e2e/: smoke.spec.ts
apps/web/public/: mockServiceWorker.js
apps/web/src/: env.ts
docs/: README.md  api-v1.md  architecture.md  frontend-technical-spec.md  frontend_pending_tasks.md  mvp-frontend-acceptance.md  roadmap.md  technical-requirements.md  技术评审报告_搞钱小龙虾_v5.0_20260401.md
infra/nginx/: default.conf
scripts/: dev-web-open.mjs
services/ai-engine-python/: README.md  package.json  pyproject.toml
services/ai-engine-python/app/: __init__.py  config.py  database.py  main.py  matcher.py  models.py  scheduler.py
services/ai-engine-python/config/: profit_config.json
(+134 files in other folders)
