[project]
name = "airp-ai-engine"
version = "0.1.0"
description = "小龙虾AI引擎初始骨架"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.31.0",
  "apscheduler>=3.10.4",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.0",
  "pymysql>=1.1.0"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8088

